アップロードされたファイルを処理するサンプルを追加

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,8 @@
 		ハンドラ例外リゾルバ、例外コントローラの4種類のエラー処理機構を呈示する。</dd>
 		<dt><a href="mybatis/">MyBatis Sample</a></dt>
 		<dd>O/Rマッピング・フレームワークMyBatisを使用したサンプル.</dd>
+		<dt><a href="file/">File Operation Sample</a></dt>
+		<dd>ファイルのアップロードやダウンロードに関連したサンプル.</dd>
 	</dl>
 </body>
 </html>
